# flexmeasures

./: .coveragerc  .dockerignore  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  AGENTS.md  API_REVIEW_ANNOTATIONS.md  ARCHITECTURE_ANALYSIS.md  Configuration.md  DOCUMENTATION_CHANGES.md  Developing.md  Dockerfile  Installation.md  Makefile  NOTICE  PullRequest  README.md  Readme.md  SECURITY.md  TASK_SUMMARY.md  Untitled.ipynb  app.py  bitbucket-pipelines.yml  database.py  docker-compose-mac.yml  docker-compose.yml  error_views.py  flexmeasures.db  forecasting.py  init_data.py  init_docs.py  loadtest_chart_data.py  loadtest_chart_data_db.py  loadtest_chart_data_mp.py  logfile  models.py  (+15 more)
.claude/: settings.json
.claude/agents/: api-backward-compatibility-specialist.md  architecture-domain-specialist.md  coordinator.md  data-time-semantics-specialist.md  documentation-developer-experience-specialist.md  performance-scalability-specialist.md  test-specialist.md  tooling-ci-specialist.md  ui-specialist.md
.claude/hooks/: block-env-read.sh  pre-commit-check.sh  test-reminder.sh  worktree-guard.sh
.github/: PULL_REQUEST_TEMPLATE.md  issue-branch.yml
.github/actions/: setup-test-env.yml
.github/agents/: api-backward-compatibility-specialist.md  architecture-domain-specialist.md  coordinator.md  data-time-semantics-specialist.md  documentation-developer-experience-specialist.md  lead.md  performance-scalability-specialist.md  review-lead.md  test-specialist.md  tooling-ci-specialist.md  ui-specialist.md
.github/instructions/: README.md  atomic-commits.instructions.md  changelog.instructions.md  docstrings.instructions.md  error-handling.instructions.md  feature-branch-sync.instructions.md  marshmallow-schemas.instructions.md  pre-commit-hooks.instructions.md  testing.instructions.md  timezone-awareness.instructions.md  ui-terminology.instructions.md
.github/workflows/: build.yml  codeql.yml  copilot-setup-steps.yml  deploy.yml  docker-build.yml  docker-publish.yml  docker-qa.yml  documentation_links.yml  generate-dummy-price.sh  lint-and-test.yml  pypi-publish.yml  qa-release.yml  readthedocs-pr-link.yml  release.yml
bvp/: .flaskenv  Readme.md  app.py  conftest.py  database.py  run-local.py
bvp/api/: Readme.md  __init__.py
bvp/crud/: assets.py
bvp/data/: Readme.md  __init__.py  auth_setup.py  config.py  services.py  static_content.py  transactional.py  utils.py
bvp/models/: assets.py  measurements.py  user.py
bvp/scripts/: apply_jeju_meta_data.py  db_content.py  db_handling.py  get_weather_forecasts.py  init_timeseries_data.py
bvp/templates/: base.html  defaults.jinja
bvp/tests/: conftest.py  test_models.py  test_views.py  utils.py
bvp/ui/: __init__.py  error_handlers.py
bvp/utils/: __init__.py  app_utils.py  bvp_inflection.py  calculations.py  config_defaults.py  config_utils.py  data_access.py  decorator_utils.py  error_utils.py  forecasting_utils.py  geo_utils.py  pa_ssl_cert_renewal.py  time_utils.py  view_utils.py
bvp/views/: __init__.py  analytics.py  auth.py  control.py  dashboard.py  error_views.py  portfolio.py
ci/: BUILD.sh  DEPLOY.sh  Dockerfile.update  README.md  Readme.md  SETUP.sh  a1test.sql  benchmark.py  generate-dummy-price.sh  install-cbc-from-source.sh  install-cbc.sh  list-merged-prs-since-tag.sh  load-psql-extensions.sql  run_mypy.sh  setup-postgres.sh  update-packages.sh
crud/: assets.py
data/: init_frames.py
documentation/: Makefile  benefits.rst  changelog.rst  code.rst  conf.py  configuration.rst  get-in-touch.rst  getting-started.rst  index.rst  make.bat  puppeteer-config.json  requirements.txt  services.rst  source.rst
documentation/_templates/: custom-class-template.rst  custom-module-template.rst
documentation/api/: aggregator.rst  change_log.rst  dev.rst  introduction.rst  mdc.rst  notation.rst  openapi-specs.json  prosumer.rst  simulation.rst  supplier.rst  v1.rst  v1_1.rst  v1_2.rst  v1_3.rst  v2_0.rst  v2g.rst  v3_0.rst
documentation/cli/: change_log.rst  commands.rst
documentation/concepts/: algorithms.rst  annotations.rst  assets.rst  benefits.rst  benefits_of_flex.rst  commitments.rst  data-model.rst  device_scheduler.rst  flexibility.rst  inbuilt-smart-functionality.rst  markets.rst  security_auth.rst  sensors_usecase.rst  services.rst  users.rst
documentation/dev/: api.rst  auth.rst  automated-deploy-via-GHActions.rst  ci.rst  connection-secrets.rst  data.rst  dependency-management.rst  docker-compose.rst  docker.rst  error-monitoring.rst  introduction.rst  modes.rst  note-on-datamodel-transition.rst  plugins.rst  release_process.rst  scripting.rst  setup-and-guidelines.rst  why.rst
documentation/developers/: config.rst  db.rst
documentation/features/: annotations.rst  automations.rst  forecasting.rst  reporting.rst  scheduling.rst
documentation/host/: data.rst  deployment.rst  docker.rst  error-monitoring.rst  installation.rst  modes.rst  queues.rst  (+2 more)
empras/: app.py  utils.py
flexmeasures/: Readme.md  __init__.py  app.py  conftest.py
flexmeasures-env/: pyvenv.cfg
flexmeasures-instance/: .create-toy-account-on-first-run  .gitignore  requirements.txt
migrations/: env.py
models/: __init__.py  assets.py  markets.py  user.py
notebooks/: a1 data test.ipynb  a1_data_test.ipynb  fbprophet test.ipynb  insideout.ipynb  multi-asset.ipynb  prices_test.ipynb  relaxed-scheduler.ipynb  rolling_test.ipynb  weather_test.ipynb  websocket_analysis.ipynb
requirements/: Readme.md  app.in  app.txt  dev.in  dev.txt  docs.in  docs.txt  test.in  test.txt
scripts/: apply_jeju_meta_data.py  db_handling.py  init_data.py  init_docs_on_windows.py  init_timeseries_data.py
templates/: analytics.html  base.html  control.html  dashboard.html  defaults.jinja  error.html  portfolio.html  pv.html  test.html  upload.html
utils/: __init__.py  calculations.py  config_utils.py  data_access.py  forecasting_utils.py  time_utils.py  view_utils.py
views/: __init__.py  analytics.py  auth.py  control.py  dashboard.py  error_views.py  portfolio.py  utils.py
(+1040 files in other folders)
